syntax = "proto3";
package assistant_api;
option go_package = "github.com/lexatic/web-backend/protos/lexatic-backend";
import "google/protobuf/timestamp.proto";
import "common.proto";
import "assistant-deployment.proto";
import "google/protobuf/struct.proto";

message AssistantEmbeddedSkill {
  uint64 id = 1 [ jstype = JS_STRING ];
  uint64 assistantId = 2 [ jstype = JS_STRING ];
  uint64 assistantSkillId = 3 [ jstype = JS_STRING ];
  string name = 4;
  uint64 projectId = 5 [ jstype = JS_STRING ];
  uint64 organizationId = 6 [ jstype = JS_STRING ];
  google.protobuf.Struct options = 7;
  AssistantSkill assistantSkill = 8;
}

message Assistant {
  uint64 id = 1 [ jstype = JS_STRING ];
  string status = 2;
  string visibility = 3;
  string source = 4;
  uint64 sourceIdentifier = 5 [ jstype = JS_STRING ];
  repeated AssistantEmbeddedSkill assistantEmbeddedSkills = 6;
  uint64 projectId = 7 [ jstype = JS_STRING ];
  uint64 organizationId = 8 [ jstype = JS_STRING ];
  uint64 assistantProviderModelId = 9 [ jstype = JS_STRING ];
  AssistantProviderModel assistantProviderModel = 10;

  string name = 11;
  string description = 12;

  Tag assistantTag = 14;
  string language = 16;
  Organization organization = 17;
  repeated AssistantKnowledgeConfiguration assistantKnowledgeConfigurations =
      18;

  uint64 createdBy = 22 [ jstype = JS_STRING ];
  User createdUser = 23;
  uint64 updatedBy = 24 [ jstype = JS_STRING ];
  User updatedUser = 25;

  google.protobuf.Timestamp createdDate = 26;
  google.protobuf.Timestamp updatedDate = 27;

  google.protobuf.Struct appAppearance = 28;
  google.protobuf.Struct webAppearance = 29;

  AssistantDebuggerDeployment debuggerDeployment = 30;
  AssistantPhoneDeployment phoneDeployment = 31;
  AssistantWhatsappDeployment whatsappDeployment = 32;
  AssistantWebpluginDeployment webPluginDeployment = 33;
  AssistantApiDeployment apiDeployment = 34;
}

message AssistantProviderModel {
  uint64 id = 1 [ jstype = JS_STRING ];
  AgentPromptTemplate template = 2;
  string description = 3;
  uint64 providerId = 4 [ jstype = JS_STRING ];
  string modelModeType = 5;
  uint64 providerModelId = 8 [ jstype = JS_STRING ];
  ProviderModel providerModel = 9;
  repeated ProviderModelParameter assistantProviderModelParameters = 10;
  string status = 12;
  uint64 createdBy = 13 [ jstype = JS_STRING ];
  User createdUser = 14;
  uint64 updatedBy = 15 [ jstype = JS_STRING ];
  User updatedUser = 16;
  google.protobuf.Timestamp createdDate = 17;
  google.protobuf.Timestamp updatedDate = 18;
}

message AssistantKnowledgeConfiguration {
  uint64 id = 1 [ jstype = JS_STRING ];
  uint64 knowledgeId = 2 [ jstype = JS_STRING ];
  bool rerankerEnable = 3;
  uint64 rerankerProviderModelId = 4 [ jstype = JS_STRING ];
  ProviderModel rerankerProviderModel = 5;
  uint32 topK = 6;
  float scoreThreshold = 7;
  Knowledge knowledge = 8;
  string retrievalMethod = 9;
}

message AssistantProviderModelAttribute {
  string description = 2;
  AgentPromptTemplate template = 3;
  //   string instruction = 3;
  uint64 providerId = 4 [ jstype = JS_STRING ];
  uint64 providerModelId = 5 [ jstype = JS_STRING ];
  ProviderModel providerModel = 6;
  repeated ProviderModelParameter assistantProviderModelParameters = 7;
  string modelModeType = 8;
}

message AssistantAttribute {
  string source = 1;
  uint64 sourceIdentifier = 2 [ jstype = JS_STRING ];
  string name = 3;
  string description = 4;
  string visibility = 5;
  string language = 6;
}

message AssistantKnowledgeConfigurationAttribute {
  uint64 knowledgeId = 2 [ jstype = JS_STRING ];
  bool rerankerEnable = 3;
  uint64 rerankerProviderModelId = 4 [ jstype = JS_STRING ];
  uint32 topK = 6;
  float scoreThreshold = 7;
  string retrievalMethod = 8;
  bool active = 9;
}

message AssistantToolConfigurationAttribute {
  uint64 skillId = 1 [ jstype = JS_STRING ];
  string code = 2;
  google.protobuf.Struct options = 3;
  bool active = 9;
}

message CreateAssistantRequest {
  AssistantProviderModelAttribute assistantProviderModelAttribute = 1;
  AssistantAttribute assistantAttribute = 2;
  repeated string tags = 5;
  repeated AssistantKnowledgeConfigurationAttribute
      assistantKnowledgeConfigurationAttributes = 6;
  repeated AssistantToolConfigurationAttribute
      assistantToolConfigurationAttribute = 7;
}

message CreateAssistantProviderModelRequest {
  uint64 assistantId = 1 [ jstype = JS_STRING ];
  AssistantProviderModelAttribute assistantProviderModelAttribute = 2;
}

message CreateAssistantProviderModelResponse {
  int32 code = 1;
  bool success = 2;
  AssistantProviderModel data = 3;
  Error error = 4;
}

message CreateAssistantResponse {
  int32 code = 1;
  bool success = 2;
  Assistant data = 3;
  Error error = 4;
}
message CreateAssistantKnowledgeConfigurationRequest {
  uint64 assistantId = 1 [ jstype = JS_STRING ];
  repeated AssistantKnowledgeConfigurationAttribute
      assistantKnowledgeConfigurationAttributes = 2;
}

message CreateAssistantToolConfigurationRequest {
  uint64 assistantId = 1 [ jstype = JS_STRING ];
  repeated AssistantToolConfigurationAttribute
      assistantToolConfigurationAttribute = 2;
}

message CreateAssistantTagRequest {
  uint64 assistantId = 1 [ jstype = JS_STRING ];
  repeated string tags = 2;
}

// get request
message GetAssistantRequest {
  uint64 id = 1 [ jstype = JS_STRING ];
  optional uint64 assistantProviderModelId = 4 [ jstype = JS_STRING ];
}
message GetAssistantResponse {
  int32 code = 1;
  bool success = 2;
  Assistant data = 3;
  Error error = 4;
}

message GetAllAssistantRequest {
  Paginate paginate = 1;
  repeated Criteria criterias = 2;
}

message GetAllAssistantResponse {
  int32 code = 1;
  bool success = 2;
  repeated Assistant data = 3;
  Error error = 4;
  Paginated paginated = 5;
}

message GetAllAssistantProviderModelRequest {
  Paginate paginate = 1;
  repeated Criteria criterias = 2;
  uint64 assistantId = 5 [ jstype = JS_STRING ];
}

message GetAllAssistantProviderModelResponse {
  int32 code = 1;
  bool success = 2;
  repeated AssistantProviderModel data = 3;
  Error error = 4;
  Paginated paginated = 5;
}

message GetAllAssistantMessageRequest {
  Paginate paginate = 1;
  repeated Criteria criterias = 2;
  uint64 assistantId = 3 [ jstype = JS_STRING ];
  Ordering order = 5;
}

message GetAllAssistantMessageResponse {
  int32 code = 1;
  bool success = 2;
  repeated AssistantConversationMessage data = 3;
  Error error = 4;
  Paginated paginated = 5;
}

message UpdateAssistantVersionRequest {
  uint64 assistantId = 1 [ jstype = JS_STRING ];
  uint64 assistantProviderModelId = 2 [ jstype = JS_STRING ];
}
message UpdateAssistantVersionResponse {
  int32 code = 1;
  bool success = 2;
  Assistant data = 3;
  Error error = 4;
}

message UpdateAssistantDetailRequest {
  uint64 assistantId = 1 [ jstype = JS_STRING ];
  string name = 2;
  string description = 3;
}

message GetAllAssistantUserConversationRequest {
  uint64 assistantId = 1 [ jstype = JS_STRING ];
  Paginate paginate = 2;
  repeated Criteria criterias = 3;
  Source source = 7;
}

message GetAllAssistantUserConversationResponse {
  int32 code = 1;
  bool success = 2;
  repeated AssistantConversation data = 3;
  Error error = 4;
  Paginated paginated = 5;
}

message AssistantSkill {
  uint64 id = 1 [ jstype = JS_STRING ];
  string code = 2;
  string name = 3;
  string description = 4;
  google.protobuf.Struct setupOptions = 5;
  google.protobuf.Struct intializeOptions = 6;
  string icon = 7;
  string visibility = 8;
}

message GetAssistantSkillRequest { uint64 id = 1 [ jstype = JS_STRING ]; }
message GetAssistantSkillResponse {
  int32 code = 1;
  bool success = 2;
  AssistantSkill data = 3;
  Error error = 4;
}

message GetAllAssistantSkillRequest {
  Paginate paginate = 1;
  repeated Criteria criterias = 2;
}

message GetAllAssistantSkillResponse {
  int32 code = 1;
  bool success = 2;
  repeated AssistantSkill data = 3;
  Error error = 4;
  Paginated paginated = 5;
}

message GetAllAssistantEmbeddedSkillRequest {
  uint64 assistantId = 1 [ jstype = JS_STRING ];
  Paginate paginate = 2;
  repeated Criteria criterias = 3;
}
message GetAllAssistantEmbeddedSkillResponse {
  int32 code = 1;
  bool success = 2;
  repeated AssistantEmbeddedSkill data = 3;
  Error error = 4;
  Paginated paginated = 5;
}

service AssistantService {
  rpc GetAssistant(GetAssistantRequest) returns (GetAssistantResponse);
  rpc GetAllAssistant(GetAllAssistantRequest) returns (GetAllAssistantResponse);

  rpc GetAllAssistantProviderModel(GetAllAssistantProviderModelRequest)
      returns (GetAllAssistantProviderModelResponse);

  rpc CreateAssistant(CreateAssistantRequest) returns (CreateAssistantResponse);

  rpc CreateAssistantProviderModel(CreateAssistantProviderModelRequest)
      returns (CreateAssistantProviderModelResponse);

  //   next gen
  rpc CreateAssistantKnowledgeConfiguration(
      CreateAssistantKnowledgeConfigurationRequest)
      returns (GetAssistantResponse);

  rpc CreateAssistantToolConfiguration(CreateAssistantToolConfigurationRequest)
      returns (GetAssistantResponse);

  rpc CreateAssistantTag(CreateAssistantTagRequest)
      returns (GetAssistantResponse);

  rpc UpdateAssistantVersion(UpdateAssistantVersionRequest)
      returns (UpdateAssistantVersionResponse);

  rpc UpdateAssistantDetail(UpdateAssistantDetailRequest)
      returns (GetAssistantResponse);

  rpc GetAllAssistantMessage(GetAllAssistantMessageRequest)
      returns (GetAllAssistantMessageResponse);

  rpc GetAllAssistantConversation(GetAllAssistantConversationRequest)
      returns (GetAllAssistantConversationResponse);

  rpc GetAllConversationMessage(GetAllConversationMessageRequest)
      returns (GetAllConversationMessageResponse);

  rpc GetAssistantSkill(GetAssistantSkillRequest)
      returns (GetAssistantSkillResponse);

  rpc GetAllAssistantSkill(GetAllAssistantSkillRequest)
      returns (GetAllAssistantSkillResponse);

  rpc GetAllAssistantEmbeddedSkill(GetAllAssistantEmbeddedSkillRequest)
      returns (GetAllAssistantEmbeddedSkillResponse);
}
